--- a/Aspert/Aspert/LoginPage.xaml
+++ b/Aspert/Aspert/LoginPage.xaml
@@ -9,23 +9,23 @@
             <vm:LoginPageViewModel/>
         </Grid.BindingContext>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="18*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="90*"/>
+            <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="20"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
-        <Image Source="logo.png"/>
+        <Image Grid.Column="1" 
+               Grid.Row="1" 
+               Source="logo.png"/>
         <Label Grid.Column="1" 
                Grid.Row="2" 
                HorizontalTextAlignment="Center"
@@ -34,9 +34,9 @@
                FontSize="Title"
                Text="aspert"
                TextColor="#3D51A9"/>
-        <Image Grid.Column="1" 
-               Grid.Row="3" 
-               Source="logo.png"/>
+        <Image Grid.Column="1"
+               Grid.Row="3"
+               Source="profile.png"/>
         <Entry Grid.Column="1"
                Grid.Row="4" 
                Placeholder="Usuario o Correo"
@@ -56,17 +56,6 @@
                 FontAttributes="Bold"
                 FontSize="Large"
                 Text="ENTRA O REGÍSTRATE"
-                TextColor="White"/>
-        <Label Grid.Column="1"
-               Grid.Row="7"
-               HorizontalTextAlignment="Center"
-               Text="O"
-               TextColor="#47525E"/>
-        <Button Grid.Column="1" 
-                Grid.Row="8" 
-                BackgroundColor="#C0CCDA"
-                FontFamily="sensei"
-                Text="INGRESA CON TU CUENTA GOOGLE"
                 TextColor="White"/>
     </Grid>
 </ContentPage>
