--- a/Aspert/Aspert/WelcomePage.xaml
+++ b/Aspert/Aspert/WelcomePage.xaml
@@ -4,26 +4,11 @@
              xmlns:vm="clr-namespace:Aspert.ViewModels" 
              x:Class="Aspert.WelcomePage"
              x:DataType="vm:WelcomePageViewModel">
-    <Grid BackgroundColor="#C5F8FF">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="9*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <Grid BackgroundColor="White" ColumnDefinitions="*,9*,9" RowDefinitions="*,*,*,*,*,*,*,*">
         <Label Grid.Column="1" 
                Grid.Row="1" 
                FontAttributes="Bold"
-               FontFamily="sensei"
+               FontFamily="Sensei"
                FontSize="Title"
                Margin="-10"
                Text="{Binding Usuario, StringFormat='¡Bienvenid@, {0}!'}"
@@ -31,7 +16,7 @@
         <Label Grid.Column="1" 
                Grid.Row="2" 
                FontAttributes="Bold"
-               FontFamily="sensei"
+               FontFamily="Sensei"
                FontSize="Title"
                Text="ASPERT"
                TextColor="#3D51A9"/>
@@ -40,7 +25,8 @@
                Text="ASPERT es una app desarrollada de forma gratuita para brindar información y colaboración a las personas y familias relacionadas con niños con síndrome de Asperguer."/>
         <Button Grid.Column="1" 
                 Grid.Row="4" 
-                BackgroundColor="#C5F8FF"
+                Command="{Binding Ok}"
+                BackgroundColor="White"
                 HorizontalOptions="End"
                 Text="OK"
                 TextColor="#47525E"/>
