--- a/Aspert/Aspert/MainPage.xaml
+++ b/Aspert/Aspert/MainPage.xaml
@@ -1,30 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Aspert.MainPage">
-    <Grid BackgroundColor="White" 
-          ColumnDefinitions="*,*,15*" 
-          RowDefinitions="*,*,*,30,30,100">
-        <Image Grid.Column="1"
-               Grid.ColumnSpan="2"
-               Grid.Row="1" 
+             xmlns:vm="clr-namespace:Aspert.ViewModels"
+             x:Class="Aspert.MainPage"
+             x:DataType="vm:MainPageViewModel">
+    <Grid BackgroundColor="#e9f0f0" 
+          ColumnDefinitions="*" 
+          RowDefinitions="50,2*,*,3*,50">
+        <Button Grid.Row="0"
+                BackgroundColor="#e9f0f0"
+                Command="{Binding Menu}"
+                HorizontalOptions="Start"
+                Text="[ - ]"/>
+        <Image Grid.Row="1"
+               Grid.RowSpan="3"
+               Aspect="AspectFill"
+               Source="background.png"/>
+        <Image Grid.Row="2"
                Source="logo.png"/>
-        <Label Grid.Column="1" 
-               Grid.ColumnSpan="2"
-               Grid.Row="3" 
-               Padding="20,0,0,0"
-               Text="aspert" 
-               TextColor="#3D51A9"
+        <Label Grid.Row="3"
                FontAttributes="Bold"
-               FontSize="Large"/>
-        <Label Grid.Column="1"
-               Grid.ColumnSpan="2"
-               Grid.Row="4" 
-               Padding="20,0,0,0"
-               Text="expertos en asperger" 
-               TextColor="#47525E"
-               FontAttributes="Bold"
-               FontSize="Small"/>
+               HorizontalOptions="Center"
+               Text="ASPERT" 
+               TextColor="#3d51a9"/>
+        <ImageButton Grid.Row="4"
+                     HeightRequest="50"
+                     BackgroundColor="#e9f0f0"
+                     Command="{Binding Configuration}"
+                     Source="profile.png" 
+                     HorizontalOptions="End"/>
     </Grid>
-
 </ContentPage>
