--- a/Aspert/Aspert/InitPage.xaml
+++ b/Aspert/Aspert/InitPage.xaml
@@ -8,7 +8,7 @@
         <Image Grid.Column="1"
                Grid.ColumnSpan="2"
                Grid.Row="1" 
-               Source="logo.png"/>
+               Source="nuevologo_aspert.png"/>
         <Label Grid.Column="1" 
                Grid.ColumnSpan="2"
                Grid.Row="3" 
