--- a/Aspert/Aspert/MenuPage.xaml
+++ b/Aspert/Aspert/MenuPage.xaml
@@ -19,21 +19,24 @@
                Grid.RowSpan="7"
                Aspect="AspectFill"
                Source="bg3_aspert.png"/>
-        <Button x:Name="OpenAbc" Grid.Row="2"               
+        <Button x:Name="OpenAbc" Grid.Row="2"
+                Command="{Binding AbcPage}"
                 WidthRequest="150"
                 BackgroundColor="#FFC82C"
                 Text="ASPERGER ABC"
                 FontAttributes="Bold"
                 TextColor="#fff"
                 HorizontalOptions="Center"/>
-        <Button x:Name="OpenBook" Grid.Row="4"             
+        <Button x:Name="OpenBook" Grid.Row="4"
+                Command="{Binding BookPage}"
                 WidthRequest="150"              
                 BackgroundColor="#FF2C66"
                 Text="LIBROS Y PELÍCULAS"
                 FontAttributes="Bold"
                 TextColor="#fff"
                 HorizontalOptions="Center"/>
-        <Button x:Name="OpenNews" Grid.Row="6"              
+        <Button x:Name="OpenNews" Grid.Row="6"
+                Command="{Binding NewsPage}"
                 WidthRequest="150"                
                 BackgroundColor="#3ff090"
                 Text="ÚLTIMAS NOTICIAS"
